--- a/environments/staging/kustomization.yaml
+++ b/environments/staging/kustomization.yaml
@@ -4,8 +4,5 @@ resources:
 - ../../app/
 images:
 - digest: sha256:aba44aa8513fab0cd5095eddccfcf9cccdd13177767db30039fcc21358abde91
-  name: shaozhendemoregistry.azurecr.io/mobb/hello-openshift:latest
-  newName: shaozhendemoregistry.azurecr.io/mobb/hello-openshift:0.1.5-build.15
-- digest: sha256:b3d655bf214fbde548cc3658fb4d42efb27ce3e9a4b06f98e485305b5eda51ea
   name: shaozhendemoregistry.azurecr.io/mobb/openshift-hello:latest
-  newName: shaozhendemoregistry.azurecr.io/mobb/openshift-hello:0.1.5-build.17
+  newName: shaozhendemoregistry.azurecr.io/mobb/openshift-hellp:0.1.5-build.15
